--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
     implementation 'com.google.firebase:firebase-auth-ktx:22.3.0'
 
+    // Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx:25.1.3'
+    implementation 'com.google.firebase:firebase-firestore:25.1.3'
+
+    // ViewModel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
