--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+    implementation libs.androidx.media3.common.ktx
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
